# SkyPro-Homework-2

./: .flake8  .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_main.py
tests/: test_main.py
