[tool.poetry]
name = "homework-3"
version = "0.1.0"
description = ""
authors = ["Mrzillka <mrzillka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.log.dependencies]
logger = "^1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
